# ai_team

./: .commitlintrc.yml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  real-llm.yml
agents/_base/: __init__.py  agent.py
agents/architect/: __init__.py  agent.py
agents/backend_developer/: __init__.py  agent.py
agents/designer/: __init__.py  agent.py
agents/devops/: __init__.py  agent.py
agents/frontend_developer/: __init__.py  agent.py
agents/market_researcher/: __init__.py  agent.py
agents/product_manager/: __init__.py  agent.py
agents/qa_engineer/: __init__.py  agent.py
agents/sre_support/: __init__.py  agent.py
agents/team_lead/: __init__.py  agent.py
apps/api/: main.py
apps/cli/: main.py
core/: config.py  dispatcher.py
core/audit/: __init__.py  writer.py
core/dispatcher/: __init__.py  dispatcher.py  hold_queue.py  mcp_race_router.py
core/llm/: __init__.py  agent_sdk_stub.py  base.py  claude_code_headless.py  factory.py  mcp_health.py  mock.py
core/messaging/: __init__.py  bus.py  feed.py  schemas.py
core/observability/: __init__.py  logging.py  metrics.py
core/persistence/: __init__.py  database.py  models.py  task_state.py
core/retry/: __init__.py  retry_blocked.py
core/security/: __init__.py  hmac_signer.py  redaction.py  sanitizer.py
core/target_repo/: __init__.py  base.py  github.py  in_repo_example.py  registry.py  self_bootstrap.py
docs/adr/: 0001-orchestrator-choice.md  0002-message-schema.md  0003-audit-log-strategy.md  0004-tool-inventory.md  0005-auth-secrets.md  0006-cost-context-optimization.md  0007-visibility-checkpoints.md  0008-llm-access-strategy.md  0009-target-repo-abstraction.md
docs/backlog/: 094e4768-b145-454b-be12-86e79e927e7d.md  1f8936ad-f431-443f-b44a-e2445f3d81da.md  2506cb07-2ba9-40f0-a248-f87fc4d6c2d1.md  3436eab5-dcc8-4aa5-82c3-8693ca541160.md  4d5e832e-0123-4633-8ae7-346b5389a660.md  9e08db7d-9431-4b13-8f42-9e8f6ceea343.md  acc889d1-1678-49f4-9c1f-22e0dc03c815.md  b9ef9efe-e703-4e57-ad86-f89360fa9201.md  bee67af2-0ad7-4ca9-a4a6-b3a4b950724d.md  c4be0505-2c5c-4688-9453-f0c2bd823574.md  cdb717f8-844b-4e5a-bca5-a3757c0de9ef.md  df6a4d19-3e4f-46ca-a1b1-701312820323.md  e0780d4c-6f17-4d8e-8b98-266f185735dd.md  ee8652a6-22ff-4877-98c8-cc99145a8153.md
docs/iterations/: iter_0.md  iter_0_retro.md  iter_0_smoke_report.md  iter_1.md  iter_10.md  iter_10_demo_report.md  iter_10_handoff.md  iter_10_retro.md  iter_11.md  iter_11_demo_report.md  iter_11_handoff.md  iter_11_retro.md  iter_12.md  iter_12_demo_report.md  iter_12_handoff.md  iter_12_retro.md  iter_13.md  iter_13_demo_report.md  iter_13_handoff.md  iter_13_retro.md  iter_14.md  iter_14_demo_report.md  iter_14_handoff.md  iter_14_retro.md  iter_15.md  iter_15_demo_report.md  iter_15_handoff.md  iter_15_retro.md  iter_16.md  iter_16_demo_report.md  iter_16_handoff.md  iter_16_retro.md  iter_17.md  iter_17_demo_report.md  iter_17_handoff.md  iter_17_retro.md  iter_18.md  iter_18_demo_report.md  iter_18_handoff.md  iter_18_retro.md  (+89 more)
docs/sandbox/: idea_validator_spec.md  idea_validator_v2_spec.md
examples/sandbox/idea-validator/: README.md  backlog.md  conftest.py  pyproject.toml
examples/sandbox/idea-validator/docs/adr/: 0001-idea-validator-v2-architecture.md
examples/sandbox/idea-validator/docs/design/: idea-validator.md
examples/sandbox/idea-validator/sample/: competitors.json  differentiators.md  input.json  market.md  report.md  risks.md  score.json
examples/sandbox/idea-validator/scripts/: refresh_sample.sh
examples/sandbox/idea-validator/src/idea_validator/: __init__.py  cli.py  llm.py  models.py  pipeline.py  search.py  security.py
examples/sandbox/idea-validator/src/idea_validator/stages/: __init__.py  competitor_search.py  differentiator_analysis.py  market_estimate.py  parse_input.py  report_writer.py  risk_analysis.py  scoring.py
examples/sandbox/idea-validator/tests/: conftest.py  test_cli.py  test_models.py  test_pipeline_end_to_end.py  test_prompt_injection.py  test_regression_pm_acs.py  test_stages.py
infra/: docker-compose.yml
infra/monitoring/: prometheus.yml
prompts/: architect.md  backend_developer.md  designer.md  devops.md  frontend_developer.md  market_researcher.md  product_manager.md  qa_engineer.md  sre_support.md  team_lead.md
scripts/: demo_iter_0.sh  demo_iter_1.sh  demo_iter_10.sh  demo_iter_11.sh  demo_iter_12.sh  demo_iter_13.sh  demo_iter_14.sh  demo_iter_15.sh  demo_iter_16.sh  demo_iter_17.sh  demo_iter_18.sh  demo_iter_19.sh  demo_iter_2.sh  demo_iter_20.sh  demo_iter_21.sh  demo_iter_22.sh  demo_iter_23.sh  demo_iter_24.sh  demo_iter_25.sh  demo_iter_26a.sh  demo_iter_26b.sh  demo_iter_3.sh  demo_iter_4.sh  demo_iter_5.sh  demo_iter_6.sh  demo_iter_7.sh  demo_iter_8.sh  demo_iter_9.sh  iter_26a_constraints.json  iter_26b_constraints.json  measure_iter2_cache.py  measure_mcp_coldstart.py  preflight_quota_check.sh  publish_test_message.py  smoke_claude_p.py  smoke_cross_repo_dispatch.sh  smoke_github_target_repo.sh
tests/: conftest.py
tests/integration/: conftest.py  test_apps_api_live.py  test_audit_writer.py  test_cross_repo_dispatch_e2e.py  test_dispatcher_e2e.py  test_feed_persistence.py  test_retry_endpoint.py  (+12 more)
(+95 files in other folders)
