[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea-validator"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
idea-validator = "idea_validator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_validator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["idea_validator"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio[trio]>=4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.coverage.report]
fail_under = 80
